RESUB: Added FIx for Top Builds comment_count not showing correct order. Mobile Styling tweaks

--- a/src/styles/HomeTopBuildCard.module.css
+++ b/src/styles/HomeTopBuildCard.module.css
@@ -5,6 +5,7 @@
     max-width: 1024px;
     justify-content: center;
     margin: 2rem auto;
+    gap: 1rem;
 }
 
 .HomeBuildCard {
@@ -12,5 +13,15 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+}
+
+@media screen and (max-width: 767px) {
+    .HomeBuildCard {
+        width: 45%;
+        justify-content: space-between;
+    }
+    .HomeBuildCard > a {
+        width: 100%;
+    }
 }
 
